--- a/apps/website/templates/website/components/brand_slider.html
+++ b/apps/website/templates/website/components/brand_slider.html
@@ -1,128 +1,98 @@
 {% comment %}
 PARAMETERS
-- templates:
-    - brand_list:list[(str,str)] --> List of brands to include in the slider with the form list of tuples (img_url, alt)
+    * companies:QuerySet[Company] --> QuerySet of Company model objects
 {% endcomment %}
-
-{# LOAD PACKAGES/TAGs #}
-{% load static %}
-{% load compress %}
 
 {# ? -------------------------------- CONTENT ------------------------------- #}
 <div id="brand-slider" class="brand-slider">
     <div class="slide-track">
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/1.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/2.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/3.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/4.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/5.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/6.png" height="100" width="250" alt=""/>
-        </div>
-        <div class="slide">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/557257/7.png" height="100" width="250" alt=""/>
-        </div>
+        {% for company in companies %}
+            <div class="slide">
+                <img src="{{ company.logo.url }}" alt="{{ company.name }}"/>
+            </div>
+        {% endfor %}
+
+        {% for company in companies %}
+            <div class="slide">
+                <img src="{{ company.logo.url }}" alt="{{ company.name }}"/>
+            </div>
+        {% endfor %}
     </div>
 </div>
 
 {# ? --------------------------------- STYLES -------------------------------- #}
-{% compress css %}
-    <style>
-        .brand-slider {
-            background: white;
-        {#box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);#} height: 100px;
-            margin: auto;
-            overflow: hidden;
-            position: relative;
-            width: 100%;
-        }
+<style>
+    .brand-slider {
+        background: white;
+        height: 100px;
+        margin: auto;
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+    }
 
+
+    .brand-slider::before, .brand-slider::after {
+        background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+        content: "";
+        height: 100px;
+        position: absolute;
+        width: 200px;
+        z-index: 2;
+    }
+
+    .brand-slider::after {
+        right: 0;
+        top: 0;
+        transform: rotateZ(180deg);
+    }
+
+    .brand-slider::before {
+        left: 0;
+        top: 0;
+    }
+
+    .brand-slider .slide-track {
+        -webkit-animation: scroll {% widthratio companies.count 1 6 %}s linear infinite;
+        animation: scroll {% widthratio companies.count 1 6 %}s linear infinite;
+        display: flex;
+        width: calc(250px * {% widthratio companies.count 1 2 %});
+        height: 100px;
+    }
+
+    .brand-slider .slide {
+        width: 250px;
+        height: 100px;
+    }
+
+    .brand-slider .slide img {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+    }
+
+
+    @-webkit-keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(calc(-250px * {{ companies.count }}));
+        }
+    }
+
+    @keyframes scroll {
+        0% {
+            transform: translateX(0);
+        }
+        100% {
+            transform: translateX(calc(-250px * {{ companies.count }}));
+        }
+    }
+
+    @media (max-width: 640px) {
         .brand-slider::before, .brand-slider::after {
-            background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
-            content: "";
-            height: 100px;
-            position: absolute;
-            width: 200px;
-            z-index: 2;
+            width: 50px;
         }
-
-        .brand-slider::after {
-            right: 0;
-            top: 0;
-            transform: rotateZ(180deg);
-        }
-
-        .brand-slider::before {
-            left: 0;
-            top: 0;
-        }
-
-        .brand-slider .slide-track {
-            -webkit-animation: scroll 40s linear infinite;
-            animation: scroll 40s linear infinite;
-            display: flex;
-            width: calc(250px * 14);
-        }
-
-        .brand-slider .slide {
-            height: 100px;
-            width: 250px;
-        }
-
-        @-webkit-keyframes scroll {
-            0% {
-                transform: translateX(0);
-            }
-            100% {
-                transform: translateX(calc(-250px * 7));
-            }
-        }
-
-        @keyframes scroll {
-            0% {
-                transform: translateX(0);
-            }
-            100% {
-                transform: translateX(calc(-250px * 7));
-            }
-        }
-
-        @media (max-width: 640px) {
-            .brand-slider::before, .brand-slider::after {
-                width: 50px;
-            }
-        }
-
-    </style>
-{% endcompress %}
+    }
+</style>
